--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -30,17 +30,33 @@
             <LinearLayout
                 android:id="@+id/aa"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_marginLeft="10dp" >
 
-                <TextView
-                    android:id="@+id/post_item_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/photos"
-                    android:textColor="@color/main_color_gray"
-                    android:textSize="16sp" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/post_item_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/photos"
+                        android:textColor="@color/main_color_gray"
+                        android:textSize="16sp" />
+
+                    <Button
+                        android:id="@+id/del_pst_btn"
+                        style="@style/gray_dk_btn"
+                        android:gravity="center"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="44dp"
+                        android:layout_height="wrap_content"
+                        android:text="X"
+                        android:layout_gravity="right"
+                        android:onClick="delete_post_profile_btn"/>
+                </RelativeLayout>
                 <TextView
                     android:id="@+id/post_item_content"
                     android:layout_width="wrap_content"
@@ -49,6 +65,7 @@
                     android:textColor="@color/main_color_gray"
                     android:textSize="13sp" />
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
