--- a/app/src/main/res/layout/fragment_profile_about_me.xml
+++ b/app/src/main/res/layout/fragment_profile_about_me.xml
@@ -168,7 +168,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:orientation="vertical"
+        android:background="@color/tab_bg_color">
 
         <TextView
             android:layout_width="match_parent"
