--- a/app/src/main/res/layout/post_frag.xml
+++ b/app/src/main/res/layout/post_frag.xml
@@ -22,6 +22,8 @@
         android:paddingRight="10dp"
         android:paddingTop="5dp" >
 
+
+
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
@@ -35,6 +37,9 @@
             android:layout_weight="1"
             android:orientation="vertical" >
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/textView_ex2"
                 android:layout_width="wrap_content"
@@ -42,6 +47,18 @@
                 android:text="On the ice"
                 android:textColor="@color/main_color_gray"
                 android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/del_pst_btn"
+                style="@style/gray_dk_btn"
+                android:gravity="center"
+                android:layout_alignParentRight="true"
+                android:layout_width="40dp"
+                android:text="X"
+                android:layout_height="40dp"
+                android:padding="12dip"
+                android:onClick="delete_post_profile_btn"/>
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/textView_ex3"
