--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,8 +4,8 @@
     android:id="@+id/va"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,15 +40,15 @@
             android:id="@+id/prof_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/cover"
+            android:layout_alignEnd="@+id/linearLayout2"
+            android:layout_alignLeft="@+id/linearLayout2"
+            android:layout_alignRight="@+id/linearLayout2"
+            android:layout_alignStart="@+id/linearLayout2"
             android:layout_gravity="center_horizontal"
             android:padding="12dip"
             android:text="Ammar ELWazir"
             android:textColor="#ffffffff"
-            android:layout_alignBottom="@+id/cover"
-            android:layout_alignLeft="@+id/linearLayout2"
-            android:layout_alignStart="@+id/linearLayout2"
-            android:layout_alignRight="@+id/linearLayout2"
-            android:layout_alignEnd="@+id/linearLayout2"
             android:textSize="@dimen/abc_text_size_title_material"
             android:textStyle="bold"
             android:typeface="serif" />
@@ -57,36 +57,36 @@
             android:id="@+id/img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/profile_pic"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="15dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp" />
+            android:src="@drawable/profile_pic" />
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="6dp"
             android:layout_toRightOf="@+id/img"
-            android:gravity="bottom"
-            android:id="@+id/linearLayout2">
+            android:gravity="bottom">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="vertical"
-                android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:gravity="center">
+                android:paddingTop="5dp">
 
                 <TextView
                     android:id="@+id/textView_ex7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="About ME"
-                    android:textColor="@color/main_color_gray"
                     android:onClick="about_me_click"
+                    android:text="About"
+                    android:textColor="@color/main_color_gray"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -102,10 +102,10 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="vertical"
-                android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:gravity="center">
+                android:paddingTop="5dp">
 
                 <TextView
                     android:id="@+id/textView_ex8"
@@ -137,10 +137,10 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="vertical"
-                android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:gravity="center">
+                android:paddingTop="5dp">
 
                 <TextView
                     android:id="@+id/textView_ex10"
